--- a/src/components/modal/floating.style.css
+++ b/src/components/modal/floating.style.css
@@ -1,4 +1,4 @@
-.container-card {
+.container-float {
     padding: 1.5em;
     background-color: white;
     border-radius: 10px;
@@ -6,5 +6,7 @@
     display: flex;
     flex-direction: row;
     margin: 0px 0px 0px 16px;
+    display: none
+    
     
 }
