--- a/src/pages/home/home.style.css
+++ b/src/pages/home/home.style.css
@@ -1,88 +1,160 @@
+/* Home */
+
 .container-home {
-    background-color:rgb(238, 245, 249);
+    background-color: rgb(238, 245, 249);
     display: flex;
-    height: 100vh;  /*vh melhor para compatibilidade */
+    height: 100vh;    /*vh melhor para compatibilidade */
     align-items: center;
     justify-content: center;
     width: 100%;
     flex-direction: column;
-    
 
 }
-.card-home-content-left{
+
+.title-red {
+    color: red;
+    font: 400;
+}
+
+.title-green {
+    color: green;
+    font: 400;
+}
+.container-dashboard-home{
+    color: '';
+}
+
+/* Left Dashboard */
+
+.card-home-content-left {
     display: flex;
     justify-content: center;
     margin: 0.5rem;
-    
-}
-.card-home-content-rigth{
-    display: flex;
-    justify-content: center;
-    margin: 0.5rem;
-    border-left: 2px solid rgba(143, 143, 143, 0.442);
-    border-radius: 2px;
-    
+
 }
 
+.card-home-user-name-text {
+    margin-top: -0.6em;
+    font-weight: bold;
+    font-size: large;
 
-.card-home-month-finances{
-    width: 7vw;
+}
+
+.card-home-month-finances {
+    width: 100%;
     max-height: 0.65rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 1rem;
-}
-.card-home-user-name-text {
-    margin-top: -0.6em;
-    font-weight: bold;
-    font-size: large;
-    
-}
-.title-red{
-    color: red;
-    font:400 ;
-    
-
+    margin: 1rem 0;
 }
 
-.title-green{
-    color: green;
-    font:400 ;
-}
+
 .card-home-month-finances p {
     margin-bottom: 1px;
     font-weight: lighter;
 }
-.graph-button-home{
+
+.graph-button-home {
     align-items: center;
     justify-content: center;
     padding: 1rem;
     max-height: 10.5rem;
     border-radius: 10px;
-    box-shadow: 2px 2px 5px rgba(143, 143, 143, 0.442) ;
+    box-shadow: 2px 2px 5px rgba(143, 143, 143, 0.442);
     margin: 0px 0px 0px 16px;
     color: rgba(0, 0, 0, 0.73);
-   
+
 }
-.button-expenses-home{
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   flex-direction: row;
-}
-.button-expenses{
+
+/* Right-Dashboard */
+
+.card-home-content-rigth {
     display: flex;
     justify-content: center;
+    margin: 0.5rem;
+    border-left: 2px solid rgba(143, 143, 143, 0.442);
+    border-radius: 2px;
     align-items: center;
-    flex-direction: column;
-    padding: 18px 0px 0px 0px;
+
+
 }
-.button-add{
+
+.button-home-options {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 
+}
+
+.button-home-options span {
+    font-weight: lighter;
+    color: rgba(0, 0, 0, 0.753);
+}
+
+.icon-subs {
+    color: red;
+    height: 3rem;
+    width: 3rem;
+}
+
+.icon-add {
+    color: green;
+    height: 3rem;
+    width: 3rem;
+}
+
+/* Card-total-balance */
+
+.home-box-total-balance {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-left: 4px solid green;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+   
+}
+.card-home-final-balance{
+    padding: 1.5rem ;
+}
+
+
+
+
+/* Modal  */
+
+.budget-modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.purchase-info-inputs{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.currence-input{
+    margin-right: 1rem;
+}
+.description-input {
+    width: 30rem;
+    display: block;
+}
+
+.modal-button-save {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+}
+
+.icon-button-save {
+    color: dodgerblue;
+    height: 3rem;
+    width: 3rem;
 }
