--- a/src/pages/home/home.style.css
+++ b/src/pages/home/home.style.css
@@ -21,15 +21,24 @@
     font: 400;
 }
 .container-dashboard-home{
-    color: '';
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+   padding: 1rem;
+  
+}
+.wellcome-home{
+   
+    margin-bottom: 4rem;
 }
 
 /* Left Dashboard */
 
 .card-home-content-left {
     display: flex;
+    align-items: center;
     justify-content: center;
-    margin: 0.5rem;
+    margin: 0.1rem;
 
 }
 
@@ -37,48 +46,61 @@
     margin-top: -0.6em;
     font-weight: bold;
     font-size: large;
-
+    
 }
 
 .card-home-month-finances {
     width: 100%;
-    max-height: 0.65rem;
+    height: 0.65rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 1rem 0;
+    margin: 1rem ;
+
 }
 
 
 .card-home-month-finances p {
-    margin-bottom: 1px;
+    margin-bottom: 2px;
     font-weight: lighter;
+
+    
 }
 
 .graph-button-home {
     align-items: center;
     justify-content: center;
-    padding: 1rem;
-    max-height: 10.5rem;
+    width: 10rem;
+    padding: 1.5rem;
+    height:5.7rem ;
     border-radius: 10px;
-    box-shadow: 2px 2px 5px rgba(143, 143, 143, 0.442);
+    box-shadow:  2px 2px 2px 5px rgba(143, 143, 143, 0.136);
     margin: 0px 0px 0px 16px;
     color: rgba(0, 0, 0, 0.73);
+   
+    
 
 }
 
 /* Right-Dashboard */
 
-.card-home-content-rigth {
+.card-home-content-right {
     display: flex;
     justify-content: center;
     margin: 0.5rem;
     border-left: 2px solid rgba(143, 143, 143, 0.442);
     border-radius: 2px;
     align-items: center;
-
-
+  
+}
+.title-card-home-content-right{
+    display: flex;
+    padding: 1rem;
+    margin-bottom: rem;
+    height: 6rem;
+    font-weight: 600;
+    font-size: larger;
 }
 
 .button-home-options {
