--- a/src/pages/register/register.style.css
+++ b/src/pages/register/register.style.css
@@ -1,7 +1,53 @@
-.modal-info{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100dvh;
-    
+.container-register {
+
+  display: flex;
+  height: 100vh;    /*vh melhor para compatibilidade */
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+}
+
+/* Buttons */
+
+.financialEntryAddition {
+  width: 1rem;
+}
+
+.fabAddEntryButton {
+  background-image: linear-gradient(10deg, rgb(250, 250, 250), hsl(0, 99%, 55%));
+  ;
+  height: 1.8rem;
+  width: 2.3rem;
+}
+
+.addEntryButton {
+  animation: pulse 2000ms ease-in-out infinite;
+  border-radius: 50%;
+  /* Torna o botão redondo */
+  width: 3.4rem;
+  /* Define a largura do botão */
+  height: 4rem;
+  /* Define a altura do botão */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(255, 32, 32, 0.2);
+  }
+
+  50% {
+    transform: scale(1.1);
+    box-shadow: 0 0 0 10px rgba(255, 80, 80, 0.066);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(255, 30, 30, 0);
+  }
 }
