--- a/src/tab/tab.style.css
+++ b/src/tab/tab.style.css
@@ -1,7 +1,13 @@
 .logo{
     display: flex;
-    max-width: 0.2rem;
-    max-height: 0.2rem;
+    max-width: 0.8rem;
+    max-height: 0.8rem;
     align-items: center;
     justify-content: center;
+    padding: 1rem;
+    margin-right: 5px;
+}
+
+.container-top-bar{
+   margin-top: -10px;
 }
